--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -296,32 +296,38 @@
           align-self: flex-end; // Alinea el contenedor en el borde inferior derecho
         }
     
-        .workshop-content-right,
-        .workshop-content-left {
-          @include flex-layout(column, center, flex-start); // Flexbox en columna, centrado y alineación superior
+        .workshop-content {
+          @include flex-layout(column, flex-start, flex-start); // Flexbox en columna, centrado y alineación superior
           width: 245px;
           gap: 15px;
           padding-left: 126px;
           padding-right: 126px;
           text-align: left;
     
-          h3 {
-            @include typography($color: $accent-color, $size: 16px, $weight: 700, $lineHeight: 120%, $align: left);
+          .workshop-info {
+            @include flex-layout($direction: column, $justify: space-between, $align: flex-start);
+            width: 100%;
+
+            .workshop-icon-text {
+              @include flex-layout(column, flex-start, flex-start); // Flexbox en columna, alineación izquierda
+              text-align: left;
+              padding-left: 0;
+              padding-bottom: 12px;
+              width: 100%;
+
+              h3 {
+                @include typography($color: $accent-color, $size: 16px, $weight: 700, $lineHeight: 120%, $align: left);
+              }
+            
+              .default-text {
+                display: block;
+                @include typography($color: $primary-text-color, $size: 16px, $weight: 400, $lineHeight: 120%, $letter-spacing: 0, $align: left); // Usando typography
+           
+              }
+            }
           }
-    
-          .workshop-icon-text {
-            @include flex-layout(column, flex-start, flex-start); // Flexbox en columna, alineación izquierda
-            text-align: left;
-          }
-    
           .expandable-text {
-            @include flex-layout(row, flex-start, flex-start); // Flexbox en fila, alineación izquierda
-            @include typography($color: $primary-text-color, $size: 16px, $weight: 400, $lineHeight: 1.2, $align: left);
-            width: 245px;
-            position: relative;
-            visibility: visible;
-            padding: 0;
-            gap: 0;
+            display: none;
           }
     
           .expand-icon {
