Se revisan márgenes, textos e imágenes de movile. Se añade animación de input y de icono expandir texto

--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -463,7 +463,7 @@
         }
     
         .text-button {
-          @include flex-layout(column, flex-start, start); // Aplicando el mixin flex-layout a text-button
+          @include flex-layout(column, flex-start, flex-start); // Aplicando el mixin flex-layout a text-button
           gap: 12px;
           
         }
