--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,4 +7,4 @@ $accent-color: #546eb1;
 $tertiary-color: #4E4D49;
 $background-color: #F8F8F8 ;
 $primary-text-color: #1F1F1D;
-$font-stack: "Montserrat", sans-serif;
+$font-stack: "Montserrat";
